src/objects/DDS_SKUCombination__mdt.object
<CustomObject>
    <description>SKU identification according to product combinations.</description>
    <fields>
        <fullName>IsForTesting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is for testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductCombination__c</fullName>
        <description>Combination of product codes associated with an SKU, separated by &quot;;&quot;.</description>
        <inlineHelpText>Combination of product codes associated with an SKU, separated by &quot;;&quot;.</inlineHelpText>
        <label>Product Combination</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <description>SKU to which the customer&apos;s product combination corresponds.</description>
        <inlineHelpText>SKU to which the customer&apos;s product combination corresponds.</inlineHelpText>
        <label>SKU</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EU_Combo</fullName>
                    <label>EU Combo</label>
                </value>
                <value>
                    <fullName>EU_Market</fullName>
                    <label>EU Market</label>
                </value>
                <value>
                    <fullName>EU_Reit</fullName>
                    <label>EU Reit</label>
                </value>
                <value>
                    <fullName>FullPlatform</fullName>
                    <label>Full Platform</label>
                </value>
                <value>
                    <fullName>MarketCombo</fullName>
                    <label>Market Combo</label>
                </value>
                <value>
                    <fullName>News1</fullName>
                    <label>News 1</label>
                </value>
                <value>
                    <fullName>News2</fullName>
                    <label>News 2</label>
                </value>
                <value>
                    <fullName>News3</fullName>
                    <label>News 3</label>
                </value>
                <value>
                    <fullName>ReactOnly</fullName>
                    <label>React Only</label>
                </value>
                <value>
                    <fullName>REIT_Combo</fullName>
                    <label>REIT Combo</label>
                </value>
                <value>
                    <fullName>US_Combo</fullName>
                    <label>US Combo</label>
                </value>
                <value>
                    <fullName>US_Market</fullName>
                    <label>US Market</label>
                </value>
                <value>
                    <fullName>US_PortfolioTools</fullName>
                    <label>US PortfolioTools</label>
                </value>
                <value>
                    <fullName>US_Reit</fullName>
                    <label>US Reit</label>
                </value>
                <value>
                    <fullName>Detailed_NAV</fullName>
                    <label>Detailed NAV</label>
                </value>
                <value>
                    <fullName>REIT_Detailed_NAV</fullName>
                    <label>REIT + Detailed NAV</label>
                </value>
                <value>
                    <fullName>Combo_Detailed_NAV</fullName>
                    <label>Combo +  Detailed NAV</label>
                </value>
                <value>
                    <fullName>REIT_Combo_Detailed_NAV</fullName>
                    <label>REIT Combo +  Detailed NAV</label>
                </value>
                <value>
                    <fullName>Market + Detailed NAV</fullName>
                </value>
                <value>
                    <fullName>Data_Delivery</fullName>
                    <label>Data Delivery</label>
                </value>
                <value>
                    <fullName>REIT_Data_Delivery</fullName>
                    <label>REIT + Data Delivery</label>
                </value>
                <value>
                    <fullName>REIT_Combo_Data_Delivery</fullName>
                    <label>REIT Combo + Data Delivery</label>
                </value>
                <value>
                    <fullName>Market_Data_Delivery</fullName>
                    <label>Market + Data Delivery</label>
                </value>
                <value>
                    <fullName>Combo_Data_Delivery</fullName>
                    <label>Combo + Data Delivery</label>
                </value>
                <value>
                    <fullName>REIT_Detailed_NAV_Data_Delivery</fullName>
                    <label>REIT + Detailed NAV + Data Delivery</label>
                </value>
                <value>
                    <fullName>EU_Combo_Detailed_NAV</fullName>
                    <isActive>false</isActive>
                    <label>EU Combo +  Detailed NAV</label>
                </value>
                <value>
                    <fullName>EU_REIT_Detailed_NAV</fullName>
                    <isActive>false</isActive>
                    <label>EU REIT +  Detailed NAV</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DDS - SKU Combination</label>
    <listViews>
        <fullName>AllSKU</fullName>
        <columns>MasterLabel</columns>
        <columns>SKU__c</columns>
        <columns>ProductCombination__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsForTesting__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All SKU</label>
    </listViews>
    <pluralLabel>DDS - SKU Combinations</pluralLabel>
    <validationRules>
        <fullName>Product_Combination_Format</fullName>
        <active>false</active>
        <errorConditionFormula>NOT( 
OR( 
ISBLANK( ProductCombination__c ),REGEX(ProductCombination__c,
&quot;(DDS[0-9];)*&quot;))
)</errorConditionFormula>
        <errorMessage>The format of the combination products must be. : {DDS}Id ; separating by &quot;;&quot; . EX : DDS1;</errorMessage>
    </validationRules>
</CustomObject>